SXDEDPCXZIC-167 / fix resource icons' alignment

--- a/ckanext/datavic_iar_theme/grunt/sass/_resources.scss
+++ b/ckanext/datavic_iar_theme/grunt/sass/_resources.scss
@@ -24,6 +24,7 @@ $primary-color: #0052C2;
             display: inline-block;
             height: 60px;
             width: 60px;
+            vertical-align: text-bottom;
         }
     }
 }
